# RDMA-AI-Platform

./: .gitignore  CMakeLists.txt  README.md
benchmark/: latency_test.cpp  tcp_compare.cpp  throughput_test.cpp
docs/: architecture.md  benchmark.md  rdma-design.md
proto/: README.md  common.proto  scheduler.proto
rdma/: CMakeLists.txt  completion.cpp  completion.h  memory.cpp  memory.h  qp.cpp  qp.h  transport.cpp  transport.h
rdma/benchmark/: latency_bench.cpp  multi_conn_bench.cpp  throughput_bench.cpp
rdma/docs/: architecture.md  qp_state_machine.md  tuning.md
rdma/examples/: pingpong.cpp  send_recv_demo.cpp  worker_transport_demo.cpp  write_demo.cpp
rdma/include/rdma/: buffer_pool.h  completion_queue.h  config.h  connection.h  context.h  device.h  event_channel.h  handshake.h  logger.h  memory_region.h  metrics.h  poller.h  protection_domain.h  queue_pair.h  rdma_client.h  rdma_server.h  result_message.h  task_message.h  transport_rdma.h  types.h  worker_session.h
rdma/scripts/: bench.sh  build.sh  run_client.sh  run_server.sh
rdma/src/: buffer_pool.cpp  completion_queue.cpp  config.cpp  connection.cpp  context.cpp  device.cpp  event_channel.cpp  handshake.cpp  logger.cpp  memory_region.cpp  metrics.cpp  poller.cpp  protection_domain.cpp  queue_pair.cpp  rdma_client.cpp  rdma_server.cpp  transport_rdma.cpp  worker_session.cpp
scheduler/: go.mod  main.go
scheduler/Logger/: logger.go
scheduler/cmd/: server.go
scheduler/config/: config.yaml
scheduler/internal/: README.md
scheduler/internal/api/: heartbeat.go  register.go  router.go  status.go  submit.go
scheduler/internal/grpcapi/: server.go  server_test.go
scheduler/internal/model/: node.go  response.go  task.go
scheduler/internal/monitor/: checker.go  deliverer.go
scheduler/internal/registry/: registry.go
scheduler/internal/scheduler/: dispatch.go  scheduler.go  strategy.go
scheduler/internal/service/: node_service.go  task_service.go
scheduler/internal/storage/: memory.go
scheduler/internal/util/: id.go
scheduler/scripts/: start.sh
scripts/: benchmark.sh  start_cluster.sh
worker/: CMakeLists.txt  main.cpp
worker/config/: worker.yaml
worker/include/: executor.h  logger.h  scheduler_client.h  task.h  task_queue.h  transport.h  worker_node.h
worker/mock/: fake_model.cpp  fake_model.h
worker/model/: tensor.cpp  tensor.h
worker/runtime/: thread_pool.cpp  thread_pool.h  timer.cpp  timer.h  worker_runtime.cpp  worker_runtime.h
worker/scripts/: start_worker.sh
worker/src/: executor.cpp  logger.cpp  scheduler_client.cpp  task_queue.cpp  transport_tcp.cpp  worker_node.cpp
worker/task/: task.cpp  task.h
